<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none"
        >
        <item android:id="@+id/nav_main" android:icon="@drawable/ic_drawer_home"
            android:title="@string/menu_main" />
        <item android:id="@+id/nav_search" android:icon="@drawable/ic_action_action_search"
            android:title="@string/menu_search" />
        <item android:id="@+id/nav_banner" android:icon="@drawable/ic_main"
            android:title="@string/menu_recommend" />
        <item android:id="@+id/nav_user" android:icon="@drawable/ic_user"
            android:title="@string/menu_user" />

    </group>

    <item android:title="其它">
        <menu>

            <item android:id="@+id/nav_setting" android:icon="@drawable/ic_drawer_setting"
                android:title="@string/menu_setting" />
           <!-- <item android:id="@+id/nav_share" android:icon="@drawable/ic_drawer_share"
                android:title="@string/menu_share" />-->
            <item android:id="@+id/nav_rate" android:icon="@drawable/ic_drawer_rate"
                android:title="@string/menu_rate" />
            <item android:id="@+id/nav_send" android:icon="@drawable/ic_message"
                android:title="@string/menu_suggestion" />
        </menu>
    </item>

</menu>